fixing spacing

--- a/css/index.css
+++ b/css/index.css
@@ -90,6 +90,10 @@ h1 {
   text-align: center;
 }
 
+.bodyText {
+  margin-right: 20px;
+}
+
 .bottomSection {
  margin: 40px 20px 20px 20px;
  display: flex;
